# QTcppIDE

./: .gitignore  CMakeLists.txt  LICENSE  README.md  codeeditor.cpp  codeeditor.h  commandgen.cpp  commandgen.h  configgen.cpp  configgen.h  console.cpp  console.h  cppIDE.pro  createbuildexe.txt  filemanager.cpp  filemanager.h  globaldefs.h  highlighter.cpp  highlighter.h  install.bat.broken  linenumberarea.cpp  linenumberarea.h  main.cpp  mainwindow.cpp  mainwindow.h  miniconsole.cpp  miniconsole.h  procrunner.cpp  procrunner.h  qtextedithighlighter.cpp  qtextedithighlighter.h  qtexteditlineshighlighted.cpp  qtexteditlineshighlighted.h  search_replace.cpp  search_replace.h  search_replace.ui  statusbar.cpp  statusbar.h  syntaxhighlighter.pro
doc/: about.md
